--- a/.editorconfig
+++ b/.editorconfig
@@ -624,7 +624,7 @@ ij_html_keep_whitespaces_inside = pre, textarea
 ij_html_line_comment_at_first_column = true
 ij_html_new_line_after_last_attribute = when multiline
 ij_html_new_line_before_first_attribute = when multiline
-ij_html_quote_style = single
+ij_html_quote_style = double
 ij_html_remove_new_line_before_tags = br
 ij_html_space_after_tag_name = false
 ij_html_space_around_equality_in_attribute = false
