--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-svg-icon": "^13.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.1.4",
