Made collection points dynamic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
 			"@pipes/*": ["./src/app/pipes/*"],
 			"@services/*": ["./src/app/services/*"],
 			"@utils/*": ["./src/app/utils/*"],
-			"@environments/*": ["./src/environments/*"]
+			"@environments/*": ["./src/environments/*"],
+			"@mocks/*": ["./src/mocks/*"]
 		}
 	},
 	"angularCompilerOptions": {
