--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
 			"@pipes/*": ["./src/app/pipes/*"],
 			"@services/*": ["./src/app/services/*"],
 			"@utils/*": ["./src/app/utils/*"],
+			"@mocks/*": ["./src/app/mocks/*"],
 			"@environments/*": ["./src/environments/*"],
-			"@mocks/*": ["./src/mocks/*"]
 		}
 	},
 	"angularCompilerOptions": {
