--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.3.0",
     "@types/leaflet": "^1.7.10",
     "angular-svg-icon": "^13.0.0",
+    "angularx-qrcode": "^13.0.15",
     "leaflet": "^1.8.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
